<resources>
<!--The name of the application has been changed to Quiz-Please -->
<string name="app_name">Quiz-Please</string>
<string name="button_text">Continue</string>
<string name="image_description">welcome image</string>
<!-- TODO: Remove or change this placeholder text -->
<string name="hello_blank_fragment">Hello blank fragment</string>
<string name="quation_one">1. Who was the main lyricist of the Nautilus Pompilius group?</string>
<string-array name="quastion_one_array">
    <item>a. Butusov</item>
    <item>b. Kormiltsev</item>
    <item>v. Shahrin</item>
    <item>g. Balabanov</item>
</string-array>
<string name="quation_two">2. The real name of the leader of "Civil Defense" Letov:</string>
<string-array name="quastion_two_array">
    <item>a. Egor</item>
    <item>b. Andrey</item>
    <item>v. Jared</item>
    <item>g. Igor</item>
</string-array>
<string name="quation_three">3. Which political figure was the grandfather of musician Stas Namin?</string>
<string-array name="quastion_three_array">
    <item>a. Stalin</item>
    <item>b. Khrushchev</item>
    <item>v. Mikoyan</item>
    <item>g. Brezhnev</item>
</string-array>
<string-array name="result_array">
    <item>Unfortunately, you know nothing about Russian rock...</item>
    <item>You have room for improvement, listen more</item>
    <item>You have almost reached the top, you have good knowledge</item>
    <item>Mikhail Kozyrev, log in!</item>
</string-array>
<string name="button_send">Send</string>
<string name="button_back">Back </string>
<string name="button_date">Enter your date of birth</string>
<string name="button_try_again">Start again</string>
<string name="result_label">Congratulations! You passed the test!</string>
<string name="result_text">Your result: </string>
</resources>