<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/quiz_fragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".QuizFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/quationOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quation_one"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="20dp"
            />
        <RadioGroup
            android:id="@+id/radioGrop1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quationOne"
            app:layout_constraintStart_toStartOf="@+id/quationOne"
            android:layout_marginHorizontal="10dp">
            <RadioButton
                android:id="@+id/rb1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="a"
                />
            <RadioButton
                android:id="@+id/rb1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="b"
                />
            <RadioButton
                android:id="@+id/rb1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="c"
                />
            <RadioButton
                android:id="@+id/rb1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d"
                />
            </RadioGroup>
        <TextView
            android:id="@+id/quationTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quation_two"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toBottomOf="@+id/radioGrop1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="20dp"
            />
        <RadioGroup
            android:id="@+id/radioGrop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quationTwo"
            app:layout_constraintStart_toStartOf="@+id/quationOne"
            android:layout_marginHorizontal="10dp">
            <RadioButton
                android:id="@+id/rb2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="a"
                />
            <RadioButton
                android:id="@+id/rb2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="b"
                />
            <RadioButton
                android:id="@+id/rb2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="c"
                />
            <RadioButton
                android:id="@+id/rb2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/quationThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quation_three"
            android:fontFamily="@font/opensans_bold"
            app:layout_constraintTop_toBottomOf="@+id/radioGrop2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginVertical="20dp"
            />
        <RadioGroup
            android:id="@+id/radioGrop3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/quationThree"
            app:layout_constraintStart_toStartOf="@+id/quationThree"
            android:layout_marginHorizontal="10dp">
            <RadioButton
                android:id="@+id/rb3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="a"
                />
            <RadioButton
                android:id="@+id/rb3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="b"
                />
            <RadioButton
                android:id="@+id/rb3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="c"
                />
            <RadioButton
                android:id="@+id/rb3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="d"
                />
        </RadioGroup>
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGrop3"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/button_send"
            android:layout_margin="16dp"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGrop3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/button_back"
            android:layout_margin="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>